@@ -17,8 +17,8 @@ TRAD_SYNOPSIS
 DESCRIPTION
 <<iscntrl>> is a macro which classifies ASCII integer values by table
 lookup.  It is a predicate returning non-zero for control characters, and 0 
-for other characters.  It is defined only when <<isascii>>(<[c]>) is
-true or <[c]> is EOF. 
+for other characters.  It is defined only if <[c]> is representable as an
+unsigned char or if <[c]> is EOF.
 
 You can use a compiled subroutine instead of the macro definition by
 undefining the macro using `<<#undef iscntrl>>'.
