@@ -16,8 +16,8 @@ int isdigit(<[c]>);
 DESCRIPTION
 <<isdigit>> is a macro which classifies ASCII integer values by table
 lookup.  It is a predicate returning non-zero for decimal digits, and 0 for
-other characters.  It is defined only when <<isascii>>(<[c]>) is true
-or <[c]> is EOF.
+other characters.  It is defined only if <[c]> is representable as an
+unsigned char or if <[c]> is EOF.
 
 You can use a compiled subroutine instead of the macro definition by
 undefining the macro using `<<#undef isdigit>>'.
